# cpp-cmake-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  reinit.sh
test/: CMakeLists.txt
test/benchmarks/: CMakeLists.txt  MyFirstBenchmark.cpp
test/unittests/: CMakeLists.txt  MyFirstTest.cpp
